--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body class="dark:bg-slate-950">
   <h1 class="text-4xl text-center mx-auto font-extrabold font-sans p-10 m-6 italic">ScreenKIN</h1>
   <div class="mx-auto items-center space-x-4 p-6 max-w-sm row-auto flex justify-center">
-    <select class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-purple-100 text-gray-800"
-      id="role">
+    <select class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-purple-100 text-gray-800" id="role">
       <option value="sender">Sender</option>
       <option value="receiver">Receiver</option>
     </select>
@@ -22,9 +21,9 @@
       id="select">Select</button>
   </div>
 
-
   <!-- sender div -->
-  <div class="mx-auto  items-center px-auto max-w-screen-lg row-auto flex justify-center" id="sender" style="display:none;">
+  <div class="mx-auto  items-center px-auto max-w-screen-lg row-auto flex justify-center" id="sender"
+    style="display:none;">
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
       <button class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-green-600 text-gray-200" id="start">Start
         Sharing</button>
@@ -46,20 +45,22 @@
       <video id="video" autoplay playsinline></video>
     </div>
   </div>
-
-
   <!-- receiver div -->
-  <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center" id="receiver"
+  <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg flex flex-wrap justify-center" id="receiver"
     style="display:none;">
-    <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
-      <textarea class="rounded-lg font-medium border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-6 max-w-sm  text-gray-800 flex" id="offerReceiver"
-        placeholder="Paste offer here"></textarea>
-      <textarea class="rounded-lg font-medium border-indigo-50mx-auto bg-transparent self-center space-x-4 p-6 max-w-sm  text-gray-200 flex" id="answerReceiver"
-        placeholder="Answer will appear here" readonly></textarea>
-      <textarea class="rounded-lg font-medium border-indigo-50mx-auto bg-transparent self-center space-x-4 p-6 max-w-sm  text-gray-200 flex" id="iceCandidatesReceiver"
-        placeholder="ICE candidates will appear here" readonly></textarea>
-      <textarea class="rounded-lg font-medium border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-6 max-w-sm  text-gray-800 flex" id="senderIceCandidatesReceiver"
-        placeholder="Paste ICE candidates from sender here"></textarea>
+    <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex flex-wrap justify-center">
+      <textarea
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-transparent self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-200 flex"
+        id="answerReceiver" placeholder="Answer will appear here" readonly></textarea>
+      <textarea
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-transparent self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-200 flex"
+        id="iceCandidatesReceiver" placeholder="ICE candidates will appear here" readonly></textarea>
+      <textarea
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-800 flex"
+        id="senderIceCandidatesReceiver" placeholder="Paste ICE candidates from sender here"></textarea>
+      <textarea
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-800 flex"
+        id="offerReceiver" placeholder="Paste offer here"></textarea>
     </div>
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
       <video id="videoReceiver" autoplay playsinline></video>
@@ -84,8 +85,5 @@
       document.getElementById('select').style.display = 'none';
     });
   </script>
-
-
 </body>
-
 </html>
