--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 
-<body class="dark:bg-slate-950">
+<body class="dark:bg-slate-950 flex flex-col min-h-screen">
+  <div class="flex-1">
   <h1 class="text-4xl text-center mx-auto font-extrabold font-sans p-10 m-6 italic">ScreenKIN</h1>
   <div class="mx-auto items-center space-x-4 p-6 max-w-sm row-auto flex justify-center">
     <select class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-purple-100 text-gray-800" id="role">
@@ -19,10 +20,9 @@
     </select>
     <button class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-purple-600 text-gray-200"
       id="select">Select</button>
-  </div>
 
   <!-- sender div -->
-  <div class="mx-auto  items-center px-auto max-w-screen-lg row-auto flex justify-center" id="sender"
+  <div class="mx-auto  items-center space-x-4 p-4 px-auto max-w-screen-lg flex flex-wrap justify-center" id="sender"
     style="display:none;">
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
       <button class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-green-600 text-gray-200" id="start">Start
@@ -30,15 +30,15 @@
       <button disabled class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-red-300 text-gray-200" id="stop">Stop
         Sharing</button>
     </div>
-    <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
+    <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex flex-wrap justify-center">
       <textarea
-        class="rounded-lg font-medium border-indigo-50mx-auto bg-transparent self-center space-x-4 p-6 max-w-md text-gray-200 flex"
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-transparent self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-200 flex"
         id="offer" placeholder="Offer will appear here" readonly></textarea>
       <textarea
-        class="rounded-lg font-medium border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-6 max-w-md text-gray-800 flex"
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-slate-50 self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-800 flex"
         id="answerSender" placeholder="Paste answer here"></textarea>
       <textarea
-        class="rounded-lg font-medium border-indigo-50mx-auto bg-transparent self-center space-x-4 p-6 max-w-md text-gray-200 flex"
+        class="rounded-lg font-normal border-indigo-50mx-auto bg-transparent self-center space-x-4 p-4 m-4 max-w-md min-w-sm text-gray-200 flex"
         id="iceCandidatesSender" placeholder="ICE candidates will appear here" readonly></textarea>
     </div>
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
@@ -46,7 +46,7 @@
     </div>
   </div>
   <!-- receiver div -->
-  <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg flex flex-wrap justify-center" id="receiver"
+  <div class="mx-auto  items-center space-x-4 p-4 px-auto max-w-screen-lg flex flex-wrap justify-center" id="receiver"
     style="display:none;">
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex flex-wrap justify-center">
       <textarea
@@ -66,6 +66,24 @@
       <video id="videoReceiver" autoplay playsinline></video>
     </div>
   </div>
+</div>
+<div class="rounded-lg mx-auto items-center space-x-4 p-4 px-8 m-2 max-w-fit row-span-full bg-slate-700 flex-col text-center justify-center">
+  <!-- <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1> -->
+    <p class="font-medium border-indigo-50 p-2 px-8 text-gray-200">
+      <ul class="text-left">
+        <li class="list-item list-disc ">Try ScreenKin with your friend, find <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">intructions here</a>.</li>
+        <li class="list-item list-disc ">Star mark the <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">GitHub repository</a> :)</li>
+        <li class="list-item list-disc ">Read the <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">Documentation</a>.</li>
+        <li class="list-item list-disc ">Share on <a class="no-underline italic font-medium text-purple-500" href="https://x.com/share?text=Just started using this super cool screen sharing tool ScreenKIN! Give it a try! Created by @IamShreyaPorwal&url=https://screenkin.netlify.app/" target="_blank">Twitter (aka X.com)</a>.</li>
+    </ul>
+    </p>
+</div>
+  </div>
+  
+
+  <footer class="text-gray-300 text-center p-6">
+    made by <a href="https://www.soshals.app/shreya" class="no-underline italic font-medium text-purple-500">shreya</a>
+  </footer>
   <!-- <div id="log"></div> -->
   <script src="sender.js"></script>
   <script src="receiver.js"></script>
