--- a/docs.html
+++ b/docs.html
@@ -14,8 +14,8 @@
   <div class="flex-1">
   <h1 class="text-4xl text-center mx-auto font-extrabold font-sans p-10 m-6 italic">ScreenKIN - Documentation</h1>
   
-  <div class="rounded-lg mx-auto items-center space-x-4 p-4 m-2 max-w-fit row-span-full flex-col text-center justify-center">
-    <!-- <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1> -->
+  <div class="rounded-lg mx-auto items-center space-x-4 p-4 m-2 max-w-fit  text-center justify-center">
+    <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1>
       <p class="font-medium border-indigo-50 p-2 px-8 text-gray-200">
         <ul class="text-left">
           <li class="list-item list-disc ">Read <a class="no-underline italic font-medium text-purple-500" href="README.md" target="_blank">Documentation</a></li>
@@ -26,8 +26,32 @@
       </p>
   </div>
 
-  <!-- sender div -->
-  <div class="mx-auto  items-center px-auto max-w-screen-lg row-auto flex justify-center" id="sender"
+  <div class="justify-center rounded-lg mx-auto items-center space-x-4 p-4 m-2 max-w-fit  text-center justify-center">
+    <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1>
+      <p class="font-medium border-indigo-50 p-2 px-8 text-gray-200">
+        <ul class="text-left">
+          <li class="list-item list-disc ">Read <a class="no-underline italic font-medium text-purple-500" href="README.md" target="_blank">Documentation</a></li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus maiores asperiores dignissimos repellat sequi, neque beatae excepturi distinctio, odio nam adipisci ipsam eius, deserunt deleniti dolores rerum dolore atque doloribus.</li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+      </ul>
+      </p>
+  </div>
+
+  <div class="rounded-lg mx-auto items-center space-x-4 p-4 m-2 max-w-fit  text-center justify-center">
+    <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1>
+      <p class="font-medium border-indigo-50 p-2 px-8 text-gray-200">
+        <ul class="text-left">
+          <li class="list-item list-disc ">Read <a class="no-underline italic font-medium text-purple-500" href="README.md" target="_blank">Documentation</a></li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+          <li class="list-item list-disc ">Lorem ipsum dolor sit amet consectetur adipisicing elit</li>
+      </ul>
+      </p>
+  </div>
+
+ 
+  <!-- <div class="mx-auto  items-center px-auto max-w-screen-lg row-auto flex justify-center" id="sender"
     style="display:none;">
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
       <button class="rounded-lg font-medium border-indigo-50 p-2 px-8 bg-green-600 text-gray-200" id="start">Start
@@ -50,7 +74,6 @@
       <video id="video" autoplay playsinline></video>
     </div>
   </div>
-  <!-- receiver div -->
   <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg flex flex-wrap justify-center" id="receiver"
     style="display:none;">
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex flex-wrap justify-center">
@@ -70,7 +93,7 @@
     <div class="mx-auto  items-center space-x-4 p-6 px-auto max-w-screen-lg row-auto flex justify-center">
       <video id="videoReceiver" autoplay playsinline></video>
     </div>
-  </div>
+  </div> -->
 </div>
   <footer class="text-gray-300 text-center p-6">
     made by <a href="https://www.soshals.app/shreya" class="no-underline italic font-medium text-purple-500">shreya</a>
