--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   <!-- <h1 class="text-lg text-center mx-auto font-bold font-sans p-1 m-2">About</h1> -->
     <p class="font-medium border-indigo-50 p-2 px-8 text-gray-200">
       <ul class="text-left">
-        <li class="list-item list-disc ">Try ScreenKin with your friend, find <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">intructions here</a>.</li>
-        <li class="list-item list-disc ">Star mark the <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">GitHub repository</a> :)</li>
+        <li class="list-item list-disc ">Try ScreenKin with your friend, find <a class="no-underline italic font-medium text-purple-500" href="docs.html#guide" target="_blank">intructions here</a>.</li>
+        <li class="list-item list-disc ">Star mark the <a class="no-underline italic font-medium text-purple-500" href="https://github.com/porwalshreyaa/ScreenKin" target="_blank">GitHub repository</a> :)</li>
         <li class="list-item list-disc ">Read the <a class="no-underline italic font-medium text-purple-500" href="docs.html" target="_blank">Documentation</a>.</li>
         <li class="list-item list-disc ">Share on <a class="no-underline italic font-medium text-purple-500" href="https://x.com/share?text=Just started using this super cool screen sharing tool ScreenKIN! Give it a try! Created by @IamShreyaPorwal&url=https://screenkin.netlify.app/" target="_blank">Twitter (aka X.com)</a>.</li>
     </ul>
